fix layout bug for participant name with 200 chars

--- a/src/entities/participant/ui/participant-row-with-stat/styles.module.css
+++ b/src/entities/participant/ui/participant-row-with-stat/styles.module.css
@@ -5,6 +5,8 @@
 .row__name {
   display: flex;
   align-items: center;
+  width: 100%;
+  overflow: hidden;
 }
 
 .row__nameIcon {
