--- a/src/shared/ui-kit/input/styles.module.css
+++ b/src/shared/ui-kit/input/styles.module.css
@@ -1,9 +1,9 @@
-.inputTextContainer {
+.container {
   display: flex;
   flex-direction: column;
 }
 
-.inputText {
+.input {
   padding: 0 0 0 10px;
   transition: var(--transition-common);
   height: 38px;
@@ -12,20 +12,20 @@
   font-weight: 600;
 }
 
-.inputText::placeholder {
+.input::placeholder {
   color: var(--text-color-secondary);
 }
 
-.inputText:hover {
+.input:hover {
   border-color: var(--colors-interface-gray);
 }
 
-.inputText:focus-visible {
+.input:focus-visible {
   outline: none;
   border-color: var(--colors-interface-blue);
 }
 
-.inputText__error {
+.error {
   margin-left: 10px;
   font-size: 12px;
   line-height: 14px;
